--- a/clash/force_of_will.tex
+++ b/clash/force_of_will.tex
@@ -62,7 +62,7 @@ At the end of the \nth{12} Round, if there is no winner, all players lose the Sc
 
 \textbf{\nth{4} and \nth{8} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from every Water Wheel and Windmill on the map.
+  \item Remove all Black Cubes from every Water Wheel and Windmill on the map.
 \end{itemize}
 
 \textbf{\nth{5} and \nth{9} Rounds (2-player Scenario only):}
