--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 22:57+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -231,7 +231,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4} and \\nth{8} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
+"  \\item Remove all Black Cubes from every Water Wheel and Windmill on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -253,7 +253,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.\n"
+"  \\item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.\n"
 "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
