--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -64,7 +64,7 @@ If the Grail Token has been obtained, the players gain additional time (until th
 
 \textbf{\nth{6}, \nth{9} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from every Water Wheel and Windmill on the map.
+  \item Remove all Black Cubes from every Water Wheel and Windmill on the map.
   \item All players possessing the title of ``\textcolor{cobalt}{Grail Knight}'' gain \svg{morale_positive}.
   \item All players who do not possess a title gain 2 \svg{morale_negative}.
 \end{itemize}
@@ -95,9 +95,9 @@ During this Scenario:
       \item *\svgunit{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the \svgunit{azure} Unit Deck; you may Recruit one of these Units for half the cost (rounded down).
     \end{enumerate}
   \end{enumerate}
-  \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
-  \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction cube on their Hero portrait to mark this effect. A \textcolor{cobalt}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
-  \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of Faction cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction cubes on the Unit Card and 2 Faction cubes on the Obelisk Field.
+  \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
+  \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction Cube on their Hero portrait to mark this effect. A \textcolor{cobalt}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
+  \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of Faction Cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction Cubes on the Unit Card and 2 Faction Cubes on the Obelisk Field.
   \item A player who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.
   \item If a Unit Recruited at an Obelisk is defeated, remove it.
   \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.
@@ -113,7 +113,7 @@ During this Scenario:
   \item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.
   \item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.
   \item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \svg{damage-red} from your Units and assign it to enemy Units.''
-  \item A Hero with the Grail Token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction cube on the Grail Token to mark this effect.
+  \item A Hero with the Grail Token who possesses the title of ``\textcolor{cobalt}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.
   \item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat Round, if the Hero is a \textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \svg{damage-red} from your Units.''
 \end{itemize}
 
