--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II--III) Map Tile
   \item 2 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a Miniature representing the Dragon in the center of the Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \textbf{For a 3-player Scenario:}
@@ -52,7 +52,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 3 × Starting (I) Map Tile
   \item 3 × Far (II--III) Map Tile
   \item 3 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a Miniature representing the Dragon in the center of the Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -65,7 +65,7 @@ If the Dragon Boss still lives at the end of the \nth{14} Round, all players los
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.
+  \item Remove all Black Cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -87,7 +87,7 @@ During this Scenario:
   \item Heroes are unable to retreat from battles with the Dragon Boss.
   \item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \svg{experience}.
   \item Players can Visit each Obelisk only once.
-    Afterwards, they must place their Faction cube on the Field.
+    Afterwards, they must place their Faction Cube on the Field.
   \item In the boss encounter, there is no battle Round limit.
 \end{itemize}
 
@@ -135,7 +135,7 @@ During this Scenario:
       \begin{itemize}
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
           The Unit directly hit in the middle suffers full damage, while the Units on both sides suffer 3\,\svg{damage-red} less.
-        \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
+        \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction Cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
           This results in every Unit moving only 1 Field per Round, while the Azure Dragon can fly to any Field on the Combat Board.
@@ -265,11 +265,11 @@ During this Scenario:
     \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each Combat Round.
       Use M\&M Deck Cards placed face down to mark their locations.
     \item The Rust Dragon cannot place pools on the same Fields as in the previous Round.
-      Mark the Fields with spare Faction cubes to indicate where the pools were located.
+      Mark the Fields with spare Faction Cubes to indicate where the pools were located.
     \item The pools of sulfuric acid block battlefield Fields and impede movement for one Round only.
       They serve as Obstacles for both players and the Dragon.
     \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy Unit's armor by 2 with each attack.
-      Place a spare Faction cube on the Unit's Card to indicate this effect.
+      Place a spare Faction Cube on the Unit's Card to indicate this effect.
       Corrosion stacks up to -4 \svg{defense}.
   \end{itemize}
 }
