--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -67,7 +67,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
 \textbf{\nth{6} Round:}
 \begin{itemize}
-  \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
+  \item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
   \item Spawn an enemy army following the rules outlined below.
 \end{itemize}
 
@@ -118,7 +118,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
   \item Enemy armies have 3 MPs per Round.
   \item Enemy armies move as described in the rulebook (p.\,33), but instead of capturing, they destroy everything in their path.
-    Place Black cubes on any Field they pass through, treating those Fields as empty from that point on.
+    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.
   \item If an enemy's movement could go in different directions, the players decide which way they go.
 \end{itemize}
 
