--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -68,7 +68,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
+  \item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
 \end{itemize}
 
 \vspace*{\fill}\columnbreak
@@ -83,7 +83,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
       \item Another player (your choice) gains 2\,\svg{building_materials}
       \item Another player (your choice) gains 1\,\svg{valuables}
     \end{itemize}
-  Then, flag the VII Field with a Faction cube.
+  Then, flag the VII Field with a Faction Cube.
   (There is no bonus in solo play!)
   \item Ignore all yellow borders on Starting Tiles I.
   \item You can use your build Token to give your resources to another player.
