--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 23:13+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-07-31 22:11+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -270,11 +270,18 @@ msgstr ""
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:63
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Remove all Black cubes from Water Wheels and Windmills on the map.\n"
+#| "  \\item All Heroes gain +1 \\svgeven{movement}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from Water Wheels and Windmills on the map.\n"
+"  \\item Remove all Black Cubes from Water Wheels and Windmills on the map.\n"
 "  \\item All Heroes gain +1 \\svgeven{movement}\n"
 "\\end{itemize}\n"
 "\n"
@@ -288,7 +295,24 @@ msgstr ""
 
 #. type: multicols
 #: clash/dragoncurse_castle.tex:81
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "{2}\n"
+#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
+#| "During this Scenario:\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \\svg{building_materials}\n"
+#| "  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
+#| "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
+#| "    \\begin{itemize}\n"
+#| "      \\item Place a newly Recruited Secondary Hero.\n"
+#| "      \\item Place the Main Hero when defeated.\n"
+#| "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
+#| "    \\end{itemize}\n"
+#| "  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
+#| "    The player may immediately Recruit that Dragon for free.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "{2}\n"
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -302,7 +326,7 @@ msgid ""
 "      \\item Place the Main Hero when defeated.\n"
 "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
+"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
 "    The player may immediately Recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
