--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-26 19:17+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -20,7 +20,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
+#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5
+#: clash/force_of_will.tex:5 clash/the_hunt.tex:5
 #: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/what_to_play.tex:5
@@ -100,7 +101,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
-#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
+#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -113,7 +115,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: coops/sentinels.tex:91 clash/force_of_will.tex:74 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
 #: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
@@ -386,9 +388,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:58
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might card, 2 × Skill card\n"
+#| "\n"
 msgid ""
-"\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might card, 2 × Skill card\n"
+"\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might Card, 2 × Skill Card\n"
 "\n"
 msgstr ""
 "\\textbf{Talia Szarżujących Armii \\#1 i \\#2:} 3 × karta Mocy, 2 × karta Zdolności\n"
@@ -396,9 +401,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:60
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card\n"
+#| "\n"
 msgid ""
-"\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card\n"
+"\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card\n"
 "\n"
 msgstr ""
 "\\textbf{Talia Zdolności Szarżujących Armii \\#1 i \\#2:} 1 × karta Artefaktu ,,Tarcza Potępionych'', 1 × karta Artefaktu ,,Miecz Ognia Piekielnego''\n"
@@ -416,9 +424,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:64
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Final Charging Army Deck:} 3 × Might card, 3 × Skill card\n"
+#| "\n"
 msgid ""
-"\\textbf{Final Charging Army Deck:} 3 × Might card, 3 × Skill card\n"
+"\\textbf{Final Charging Army Deck:} 3 × Might Card, 3 × Skill Card\n"
 "\n"
 msgstr ""
 "\\textbf{Talia Ostatniej Szarżującej Armii:} 3 × Karta Mocy, 3 × Karta Umiejętności\n"
@@ -426,10 +437,14 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:67
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card,\n"
+#| "  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)\n"
+#| "\n"
 msgid ""
-"\\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card,\n"
-"  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)\n"
+"\\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card,\n"
+"  1 × ``Ballistics'' Ability Card (at Basic effect), 1 × ``First Aid'' Ability Card (at Expert effect)\n"
 "\n"
 msgstr ""
 "\\textbf{Talia Umiejętności Ostatniej Szarżującej Armii:} 1 × Karta Artefaktu ,,Tarcza Potępionych'', 1 × Karta Artefaktu ,,Miecz Ognia Piekielnego'',\n"
@@ -446,13 +461,20 @@ msgstr "Szarżujące Armie \\#1 i \\#2 używają tej samej Talii AI i Talii Umie
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:75
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "Both Artifact cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the card.\n"
+#| "The ``Sword of Hellfire'' will be used in attacks and retaliation attacks. It is not used when attacking Walls or Gates,\n"
+#| "and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it takes effect when\n"
+#| "any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact\n"
+#| "cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
+#| "\n"
 msgid ""
-"Both Artifact cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the card.\n"
-"The ``Sword of Hellfire'' will be used in attacks and retaliation attacks. It is not used when attacking Walls or Gates,\n"
-"and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it takes effect when\n"
-"any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact\n"
-"cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
+"Both Artifact Cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the Card.\n"
+"The ``Sword of Hellfire'' will be used in attacks and retaliation attacks.\n"
+"It is not used when attacking Walls or Gates, and remains in effect on the Unit.\n"
+"If ``Shield of the Damned'' is drawn, it takes effect when any Charging Army Unit takes attack or retaliation damage.\n"
+"If the AI Skill Card advises ``do it again'', the Artifact Cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
 "\n"
 msgstr ""
 "Obie karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
@@ -729,7 +751,31 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:198
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
+#| "  \\item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.\n"
+#| "  \\item Gain 3 \\svg{gold} when you defeat a Charging Hero's Army.\n"
+#| "  \\item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in\n"
+#| "    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
+#| "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
+#| "    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
+#| "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
+#| "    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
+#| "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
+#| "    else. They also make use of Stables 1 MP bonus.\n"
+#| "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
+#| "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
+#| "  \\item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy\n"
+#| "    cubes on all of their Mines.\n"
+#| "  \\item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.\n"
+#| "  \\item Enemy \\svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.\n"
+#| "  \\item Enemy \\svg{unit_ranged} Units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} Units to attack.\n"
+#| "  \\item Enemy Units will always attack your Units if possible. Only when that is not possible, then the Gate,\n"
+#| "    and then Walls will be attacked.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
@@ -738,7 +784,7 @@ msgid ""
 "  \\item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in\n"
 "    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-"    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
+"    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 Card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
 "    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
