--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:15+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -18,7 +18,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
+#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5
+#: clash/force_of_will.tex:5 clash/the_hunt.tex:5
 #: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/what_to_play.tex:5
@@ -98,7 +99,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
-#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
+#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -111,7 +113,7 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: coops/sentinels.tex:91 clash/force_of_will.tex:74 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
 #: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
@@ -355,9 +357,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:56
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{General Kendal's Deck:} 5 × Might card, 1 × Magic card, 3 × Skill card\n"
+#| "\n"
 msgid ""
-"\\textbf{General Kendal's Deck:} 5 × Might card, 1 × Magic card, 3 × Skill card\n"
+"\\textbf{General Kendal's Deck:} 5 × Might Card, 1 × Magic Card, 3 × Skill Card\n"
 "\n"
 msgstr ""
 "\\textbf{Balíček Generála Kendala:} 5 × Karta Síly, 1 × Karta Magie, 3 × Karta Schopnosti\n"
@@ -365,9 +370,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:58
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{General Kendal's Spell Deck:} 2 × Haste Spell card\n"
+#| "\n"
 msgid ""
-"\\textbf{General Kendal's Spell Deck:} 2 × Haste Spell card\n"
+"\\textbf{General Kendal's Spell Deck:} 2 × Haste Spell Card\n"
 "\n"
 msgstr ""
 "\\textbf{Balíček Kouzel Generála Kendala:} 2 × Karta Kouzla Spěch\n"
@@ -375,9 +383,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:60
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{General Kendal's Skill:} Artillery Ability card\\footnote{For General Kendal, the Artilery Ability card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability card is drawn, as well as at the beginning of a Combat Round.}\n"
+#| "\n"
 msgid ""
-"\\textbf{General Kendal's Skill:} Artillery Ability card\\footnote{For General Kendal, the Artilery Ability card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability card is drawn, as well as at the beginning of a Combat Round.}\n"
+"\\textbf{General Kendal's Skill:} Artillery Ability Card\\footnote{For General Kendal, the Artilery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}\n"
 "\n"
 msgstr ""
 "\\textbf{Schopnost Generála Kendala:} karta Dovednosti Dělostřelectvo\\footnote{Pro Generála Kendala karta Dovednosti Dělostřelectvo vždy používá Expertní efekt a Válečný Stroj Balista se aktivuje pokaždé, když je karta Dovednosti Dělostřelectvo vylosována, stejně jako na začátku Kola Boje.}\n"
@@ -405,9 +416,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:66
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card\n"
+#| "\n"
 msgid ""
-"\\textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card\n"
+"\\textbf{Charging Heroes' Deck:} 2 × Might Card, 2 × Magic Card\n"
 "\n"
 msgstr ""
 "\\textbf{Balíček Útočících Hrdinů:} 2 × Karta Síly, 2 × Karta Magie\n"
@@ -415,9 +429,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:68
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
+#| "\n"
 msgid ""
-"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
+"\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell Card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
 "\n"
 msgstr ""
 "\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × karta Kouzla Zpomalení\\footnote{Všichni Nepřátelští Útočící Hrdinové používají stejné Balíčky AI a Kouzel. Po každém Boji je resetujte.}.\n"
