--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 23:28+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -28,7 +28,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
+#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5
+#: clash/force_of_will.tex:5 clash/the_hunt.tex:5
 #: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/what_to_play.tex:5
@@ -133,7 +134,8 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:26 coops/titans_stronghold.tex:27 clash/the_hunt.tex:23
+#: coops/sentinels.tex:26 coops/titans_stronghold.tex:27
+#: clash/force_of_will.tex:24 clash/the_hunt.tex:23
 #, no-wrap
 msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
@@ -316,7 +318,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
-#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
+#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
+#: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
@@ -330,11 +333,18 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:73
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{6} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
+#| "  \\item Spawn an enemy army following the rules outlined below.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{\\nth{6} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
+"  \\item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
 "  \\item Spawn an enemy army following the rules outlined below.\n"
 "\\end{itemize}\n"
 "\n"
@@ -393,7 +403,7 @@ msgstr ""
 "\\end{itemize}\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: coops/sentinels.tex:91 clash/force_of_will.tex:74 clash/the_hunt.tex:72
 #: campaigns/inferno_devilish_plan.tex:148
 #: campaigns/inferno_steadwicks_fall.tex:188
 #: campaigns/inferno_deal_with_the_devil.tex:173
@@ -445,7 +455,28 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:124
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Enemy armies spawn on a random Obelisk Field (use Hero miniatures from Factions not in play).\n"
+#| "  \\item Determine which Obelisk Field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
+#| "  \\begin{itemize}\n"
+#| "    \\item $+1$/$+1$ = North\n"
+#| "    \\item $+1$/$-1$ = East\n"
+#| "    \\item $-1$/$+1$ = West\n"
+#| "    \\item $-1$/$-1$ = South\n"
+#| "  \\end{itemize}\n"
+#| "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
+#| "  Rounds 8 and 10 are entirely random.\n"
+#| "  \\item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
+#| "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
+#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
+#| "  \\item Enemy armies have 3 MPs per Round.\n"
+#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
+#| "    Place Black cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
+#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Enemy armies spawn on a random Obelisk Field (use Hero miniatures from Factions not in play).\n"
@@ -463,7 +494,7 @@ msgid ""
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-"    Place Black cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
+"    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
 "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
 "\\end{itemize}\n"
 "\n"
