--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-28 17:56+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -205,7 +205,7 @@ msgid ""
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Far (II--III) Map Tile\n"
 "  \\item 2 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -219,7 +219,7 @@ msgid ""
 "  \\item 3 × Starting (I) Map Tile\n"
 "  \\item 3 × Far (II--III) Map Tile\n"
 "  \\item 3 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -248,7 +248,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
+"  \\item Remove all Black Cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -267,7 +267,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.\n"
-"    You can choose randomly by picking one of the four shuffled Statistic cards: \\textit{Attack} -- Azure, \\textit{Defense} -- Crystal, \\textit{Knowledge} -- Rust, \\textit{Power} -- Faerie.\n"
+"    You can choose randomly by picking one of the four shuffled Statistic Cards: \\textit{Attack} -- Azure, \\textit{Defense} -- Crystal, \\textit{Knowledge} -- Rust, \\textit{Power} -- Faerie.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -284,7 +284,7 @@ msgid ""
 "  \\item Heroes are unable to retreat from battles with the Dragon Boss.\n"
 "  \\item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \\svg{experience}.\n"
 "  \\item Players can Visit each Obelisk only once.\n"
-"    Afterwards, they must place their Faction cube on the Field.\n"
+"    Afterwards, they must place their Faction Cube on the Field.\n"
 "  \\item In the boss encounter, there is no battle Round limit.\n"
 "\\end{itemize}\n"
 "\n"
@@ -322,16 +322,16 @@ msgid ""
 "prolonged physical attack.  It is said those standing face-to-face with an "
 "Azure Dragon tend to freeze from pure fear.  } \\medskip \\textbf{Fighting "
 "the Azure Dragon:} \\begin{enumerate} \\item Place the Azure Dragon "
-"miniature/card on the battlefield.  Ignore its ability.  \\item Prepare a "
+"Miniature/Card on the battlefield.  Ignore its ability.  \\item Prepare a "
 "pile of discarded Artifacts and shuffle it.  \\end{enumerate} \\medskip "
 "\\textbf{Rules:} \\begin{itemize} \\item \\textit{Hoarding Tendency:} At the "
-"start of each Turn, randomly choose a card from the shuffled pile of "
+"start of each Turn, randomly choose a Card from the shuffled pile of "
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
 "both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
-"spare Faction cubes.  Remove them after they have absorbed damage.  \\item A "
+"spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
 "creatures to freeze in fear.  This results in every Unit moving only 1 Field "
 "per Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
@@ -377,7 +377,7 @@ msgid ""
 "magical heart.  Used frequently as a training tool for young dragon slayers, "
 "many wizards also create these creatures for the crystal they shed.  } "
 "\\medskip \\textbf{Fighting the Crystal Dragon:} \\begin{enumerate} \\item "
-"Place the Crystal Dragon miniature/card on the battlefield.  Ignore its "
+"Place the Crystal Dragon Miniature/Card on the battlefield.  Ignore its "
 "ability.  \\item Place two Gold Golems and two Diamond Golems on the "
 "battlefield.  \\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} "
 "\\item At the start of every battle Round, check if any of the Golems were "
@@ -391,7 +391,7 @@ msgid ""
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
-"their cards.  They primarily serve as fodder for the Crystal Dragon's health "
+"their Cards.  They primarily serve as fodder for the Crystal Dragon's health "
 "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle Round.  \\end{itemize} }"
 msgstr ""
@@ -433,21 +433,21 @@ msgid ""
 "concentrated acid as their primary attack.  This acid is capable of eating "
 "through the strongest armor, lowering the defense of its target while "
 "inflicting further damage.  } \\medskip \\textbf{Fighting the Rust Dragon:} "
-"\\begin{enumerate} \\item Place the Rust Dragon miniature/card on the "
+"\\begin{enumerate} \\item Place the Rust Dragon Miniature/Card on the "
 "battlefield.  Ignore its ability.  \\item Prepare four spare M\\&M Deck "
-"cards to mark pools of acid.  \\end{enumerate} \\medskip \\textbf{Rules:} "
+"Cards to mark pools of acid.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Rust Dragon is immune to basic Spells.  \\item "
 "\\textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control "
 "ability that allows it to spew four pools of sulfuric acid onto the "
 "battlefield \\textit{at the beginning} of each Combat Round.  Use M\\&M Deck "
-"cards placed face down to mark their locations.  \\item The Rust Dragon "
+"Cards placed face down to mark their locations.  \\item The Rust Dragon "
 "cannot place pools on the same Fields as in the previous Round.  Mark the "
-"Fields with spare Faction cubes to indicate where the pools were located.  "
+"Fields with spare Faction Cubes to indicate where the pools were located.  "
 "\\item The pools of sulfuric acid block battlefield Fields and impede "
 "movement for one Round only.  They serve as Obstacles for both players and "
 "the Dragon.  \\item The Rust Dragon's passive ability, \\textit{Corrosion}, "
 "decreases an enemy Unit's armor by 2 with each attack.  Place a spare "
-"Faction cube on the Unit's card to indicate this effect.  Corrosion stacks "
+"Faction Cube on the Unit's Card to indicate this effect.  Corrosion stacks "
 "up to -4 \\svg{defense}.  \\end{itemize} }"
 msgstr ""
 
@@ -488,9 +488,9 @@ msgid ""
 "magical tomes.  Some say they are invisible.  Some say they can cast "
 "spells.  Some say Magic Mirror is one of their natural defensive traits.  } "
 "\\medskip \\textbf{Fighting the Faerie Dragon:} \\begin{enumerate} \\item "
-"Place 2 Faerie Dragon cards on the battlefield.  Ignore their abilities.  "
-"\\item Place 1 Dendroid card from the \\svg{silver} Neutral Units Deck onto "
-"the battlefield, and place 3 additional cards face down to represent the "
+"Place 2 Faerie Dragon Cards on the battlefield.  Ignore their abilities.  "
+"\\item Place 1 Dendroid Card from the \\svg{silver} Neutral Units Deck onto "
+"the battlefield, and place 3 additional Cards face down to represent the "
 "other 3 Dendroids.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Faerie Dragon is immune to basic Spells.  \\item "
 "The Faerie Dragon can cast up to two different Spells per battle Round.  "
