--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -188,7 +188,7 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
   \item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each
     other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.
   \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy
-    cubes on all of their Mines.
+    Cubes on all of their Mines.
   \item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.
   \item Enemy \svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.
   \item Enemy \svg{unit_ranged} Units will always attack the Arrow Tower once there are no other \svg{unit_ranged} Units to attack.
