--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -289,13 +289,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/force_of_will.tex:67
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4} and \\nth{8} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4} and \\nth{8} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -305,7 +299,7 @@ msgid ""
 msgstr ""
 "\\textbf{Rundy 4. i 8.:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń czarne kostki z każdego Młyna Wodnego i Wiatraka na mapie.\n"
+"  \\item Usuń Czarne Kostki z każdego Młyna Wodnego i Wiatraka na mapie.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -327,25 +321,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/force_of_will.tex:93
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-#| "  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.\n"
-#| "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
-#| "    \\item \\textbf{Normal:} 1 × \\svgunit{azure}, 1 × \\svgunit{golden}, 2 × \\svgunit{silver}\n"
-#| "    \\item \\textbf{Hard:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
-#| "    \\item \\textbf{Impossible:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
-#| "  \\end{itemize}\n"
-#| "  \\item Follow these steps when Combat begins against Neutral Units at the Dragon Utopia:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item Place up to 4 of your Unit Cards freely onto the center row of the Combat Board.\n"
-#| "    \\item The enemy player controlling the Neutral Units places each Neutral Unit in each of the 4 corners of the Combat Board.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
@@ -367,7 +343,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Gdy gracz Odwiedza Obelisk, rzuca 2 \\svg{treasure} i wybiera jeden wynik.\n"
-"  \\item Gracz nie może użyć karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
+"  \\item Gracz nie może użyć Karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
 "  \\item Gdy Bohater przemieszcza się na pole Smoczej Utopii, musi walczyć z następującą liczbą Neutralnych Jednostek w zależności od wybranego poziomu trudności:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Łatwy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
