--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -345,13 +345,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:73
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -375,34 +369,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:101
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remember: the center of VI--VII Tile next to all I Tiles is the Titans' Stronghold.\n"
-#| "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
-#| "  \\item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item Another player (your choice) gains 5\\,\\svg{gold}\n"
-#| "      \\item Another player (your choice) gains 2\\,\\svg{building_materials}\n"
-#| "      \\item Another player (your choice) gains 1\\,\\svg{valuables}\n"
-#| "    \\end{itemize}\n"
-#| "  Then, flag the VII Field with a Faction cube.\n"
-#| "  (There is no bonus in solo play!)\n"
-#| "  \\item Ignore all yellow borders on Starting Tiles I.\n"
-#| "  \\item You can use your build Token to give your resources to another player.\n"
-#| "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
-#| "  \\item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.\n"
-#| "  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).\n"
-#| "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold Deck instead of from the Neutral Unit card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit cards in this Deck, draw as many Unit cards as are available and place them on the Combat Board.\n"
-#| "  \\item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
-#| "  \\item Additionally, no player can:\n"
-#| "  \\begin{itemize}\n"
-#| "    \\item Attack other Heroes.\n"
-#| "    \\item Capture a Mine or Settlement that is already controlled.\n"
-#| "  \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
@@ -441,14 +408,14 @@ msgstr ""
 "    \\item Inny gracz (twój wybór) zyskuje 2\\,\\svg{building_materials}\n"
 "    \\item Inny gracz (twój wybór) zyskuje 1\\,\\svg{valuables}\n"
 "  \\end{itemize}\n"
-"  Następnie, oflaguj Pole VII kostką Frakcji.\n"
+"  Następnie, oflaguj Pole VII Kostką Frakcji.\n"
 "  (W grze solo nie ma bonusu!)\n"
 "  \\item Zignoruj żółte granice na Kafelkach I.\n"
 "  \\item Możesz użyć swojego żetonu budowy, aby przekazać swoje zasoby innemu graczowi.\n"
 "  \\item Dwóch graczy może użyć swoich żetonów budowy do wymiany artefaktów i/lub Zaklęć.\n"
 "  \\item Za każdym razem, gdy gracz odwiedza Obelisk, ten gracz rzuca jedną Kością skarbu i jedną Kością zasobu, i rozpatruje jedną z nich.\n"
-"  \\item Kiedy wszystkie Pola VII (z wyjątkiem Twierdzy Tytanów) zostaną oznaczone, losowo dobierz i wymieszaj określoną liczbę (patrz na następną stronę) kart Jednostek neutralnych z odpowiednich Talii, aby utworzyć osobną Talię Jednostek Neutralnych dla Twierdzy Tytanów (talia Twierdzy Tytanów może być dzielona na dwie części, ponieważ niektóre Scenariusze są w przeciwnym razie niemożliwe do wykonania z kartami z pewnych dodatków).\n"
-"  \\item Za każdym razem, gdy Bohater wchodzi do Twierdzy Tytanów, dobiera 5 kart z Talii Twierdzy Tytanów zamiast z Talii Kart Jednostek Neutralnych.\n"
+"  \\item Kiedy wszystkie Pola VII (z wyjątkiem Twierdzy Tytanów) zostaną oznaczone, losowo dobierz i wymieszaj określoną liczbę (patrz na następną stronę) Kart Jednostek neutralnych z odpowiednich Talii, aby utworzyć osobną Talię Jednostek Neutralnych dla Twierdzy Tytanów (talia Twierdzy Tytanów może być dzielona na dwie części, ponieważ niektóre Scenariusze są w przeciwnym razie niemożliwe do wykonania z Kartami z pewnych dodatków).\n"
+"  \\item Za każdym razem, gdy Bohater wchodzi do Twierdzy Tytanów, dobiera 5 Kart z Talii Twierdzy Tytanów zamiast z Talii Kart Jednostek Neutralnych.\n"
 "    Jednostki są umieszczane na planszy Walki (zob. \\mbox{str. 29} w Księdze Zasad).\n"
 "    Gracze próbują pokonać Jednostki znajdujące się w Twierdzy Tytanów.\n"
 "    Wszystkie Jednostki Neutralne pokonane podczas Walki w Twierdzy Tytanów są zwracane do odpowiednich Talii Jednostek Neutralnych, a nie do Talii Twierdzy Tytanów.\n"
