--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -273,14 +273,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:63
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from Water Wheels and Windmills on the map.\n"
-#| "  \\item All Heroes gain +1 \\svgeven{movement}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
@@ -291,31 +284,14 @@ msgid ""
 msgstr ""
 "  \\textbf{4. i 8. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń wszystkie czarne kostki z Młynów Wodnych i Wiatraków na mapie.\n"
+"  \\item Usuń wszystkie Czarne Kostki z Młynów Wodnych i Wiatraków na mapie.\n"
 "  \\item Wszyscy Bohaterowie zyskują +1 \\svgeven{movement}\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols
 #: clash/dragoncurse_castle.tex:81
-#, fuzzy, no-wrap
-#| msgid ""
-#| "{2}\n"
-#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-#| "During this Scenario:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \\svg{building_materials}\n"
-#| "  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
-#| "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item Place a newly Recruited Secondary Hero.\n"
-#| "      \\item Place the Main Hero when defeated.\n"
-#| "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
-#| "    \\end{itemize}\n"
-#| "  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
-#| "    The player may immediately Recruit that Dragon for free.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "{2}\n"
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -346,7 +322,7 @@ msgstr ""
 "      \\item Umieścić Bohatera Głównego, gdy został pokonany.\n"
 "      \\item Tymczasowo przetransportować armię za 8 \\svg{gold}, gdy Losowe Miasto jest atakowane.\n"
 "    \\end{itemize}\n"
-"  \\item Pierwszy gracz, który odwiedzi Smoczą Utopię (po pokonaniu broniących jednostek Błękitnych), ciągnie karty z Talii Neutralnych \\svgunit{azure} Jednostek do momentu, aż wylosuje Smoka niepowiązanego z żadną frakcją.\n"
+"  \\item Pierwszy gracz, który odwiedzi Smoczą Utopię (po pokonaniu broniących jednostek Błękitnych), ciągnie Karty z Talii Neutralnych \\svgunit{azure} Jednostek do momentu, aż wylosuje Smoka niepowiązanego z żadną frakcją.\n"
 "    Gracz może natychmiastowo zrekrutować tego Smoka za darmo.\n"
 "\\end{itemize}\n"
 "\n"
