--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -388,28 +388,22 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:58
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might card, 2 × Skill card\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Charging Armies \\#1 and \\#2 Deck:} 3 × Might Card, 2 × Skill Card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Szarżujących Armii \\#1 i \\#2:} 3 × karta Mocy, 2 × karta Zdolności\n"
+"\\textbf{Talia Szarżujących Armii \\#1 i \\#2:} 3 × Karta Mocy, 2 × Karta Zdolności\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:60
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Charging Armies \\#1 and \\#2 Skill Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Zdolności Szarżujących Armii \\#1 i \\#2:} 1 × karta Artefaktu ,,Tarcza Potępionych'', 1 × karta Artefaktu ,,Miecz Ognia Piekielnego''\n"
+"\\textbf{Talia Zdolności Szarżujących Armii \\#1 i \\#2:} 1 × Karta Artefaktu ,,Tarcza Potępionych'', 1 × Karta Artefaktu ,,Miecz Ognia Piekielnego''\n"
 "\n"
 
 #. type: multicols*
@@ -424,10 +418,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:64
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Final Charging Army Deck:} 3 × Might card, 3 × Skill card\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Final Charging Army Deck:} 3 × Might Card, 3 × Skill Card\n"
 "\n"
@@ -437,11 +428,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:67
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact card, 1 × ``Sword of Hellfire'' Artifact card,\n"
-#| "  1 × ``Ballistics'' Ability card (at Basic effect), 1 × ``First Aid'' Ability card (at Expert effect)\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Final Charging Army Skill/Ability Deck:} 1 × ``Shield of the Damned'' Artifact Card, 1 × ``Sword of Hellfire'' Artifact Card,\n"
 "  1 × ``Ballistics'' Ability Card (at Basic effect), 1 × ``First Aid'' Ability Card (at Expert effect)\n"
@@ -461,14 +448,7 @@ msgstr "Szarżujące Armie \\#1 i \\#2 używają tej samej Talii AI i Talii Umie
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:75
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Both Artifact cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the card.\n"
-#| "The ``Sword of Hellfire'' will be used in attacks and retaliation attacks. It is not used when attacking Walls or Gates,\n"
-#| "and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it takes effect when\n"
-#| "any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact\n"
-#| "cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Both Artifact Cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the Card.\n"
 "The ``Sword of Hellfire'' will be used in attacks and retaliation attacks.\n"
@@ -477,10 +457,10 @@ msgid ""
 "If the AI Skill Card advises ``do it again'', the Artifact Cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
 "\n"
 msgstr ""
-"Obie karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
+"Obie Karty Artefaktów wszystkich Szarżujących Armii traktowane są jako Umiejętności i używają górnego ,,słabszego'' efektu.\n"
 ",,Miecz Ognia Piekielnego'' będzie używany w atakach i kontratakach. Nie jest używany podczas atakowania Murów lub Bram\n"
-"i pozostaje aktywny na Jednostce. Jeśli zostanie dobrana karta ,,Tarcza Potępionych'', jej efekt wchodzi w życie, gdy\n"
-"jakakolwiek Jednostka Szarżującej Armii otrzyma obrażenia od ataku lub kontrataku. Jeśli karta Umiejętności AI zaleca ,,powtórzenie'', karty Artefaktów\n"
+"i pozostaje aktywny na Jednostce. Jeśli zostanie dobrana Karta ,,Tarcza Potępionych'', jej efekt wchodzi w życie, gdy\n"
+"jakakolwiek Jednostka Szarżującej Armii otrzyma obrażenia od ataku lub kontrataku. Jeśli Karta Umiejętności AI zaleca ,,powtórzenie'', Karty Artefaktów\n"
 "nie są natychmiastowo używane ponownie, lecz są używane, gdy następna Jednostka będzie mogła je zastosować.\n"
 
 #. type: multicols*
@@ -751,31 +731,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_deal_with_the_devil.tex:198
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
-#| "  \\item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.\n"
-#| "  \\item Gain 3 \\svg{gold} when you defeat a Charging Hero's Army.\n"
-#| "  \\item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in\n"
-#| "    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
-#| "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
-#| "    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
-#| "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
-#| "    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
-#| "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
-#| "    else. They also make use of Stables 1 MP bonus.\n"
-#| "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
-#| "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
-#| "  \\item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy\n"
-#| "    cubes on all of their Mines.\n"
-#| "  \\item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.\n"
-#| "  \\item Enemy \\svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.\n"
-#| "  \\item Enemy \\svg{unit_ranged} Units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} Units to attack.\n"
-#| "  \\item Enemy Units will always attack your Units if possible. Only when that is not possible, then the Gate,\n"
-#| "    and then Walls will be attacked.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
@@ -808,13 +764,13 @@ msgstr ""
 "  \\item Jeśli Szarżująca Armia wejdzie na Kafelek lub Pole, na którym znajduje się Twój Bohater Główny (wyjątek stanowi, gdy jesteś w\n"
 "    swoim mieście Inferno Kleesive), lub jeśli Szarżująca Armia zaatakuje Kleesive, a Ty nie jesteś obecny w swoim mieście\n"
 "    Kleesive, natychmiast zostajesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
-"    tracisz 3 \\svg{gold}, otrzujesz \\svg{morale_negative} i losowo odrzucasz 1 kartę z ręki.\n"
+"    tracisz 3 \\svg{gold}, otrzujesz \\svg{morale_negative} i losowo odrzucasz 1 Kartę z ręki.\n"
 "  \\item Szarżujące Armie poruszają się tylko 2 Punkty Ruchu. Ostatnia Szarżująca Armia porusza się 4 Punkty Ruchu. Podążają najkrótszą\n"
 "    drogą do Kleesive. Jeśli posiadasz Kopalnię na Kafelku mapy, na który wchodzą, przejmą Kopalnię (ale nie ,,wrócą się'' po nią),\n"
 "    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 Punktu Ruchu ze Stajni.\n"
 "  \\item Szarżujące Armie zawsze poruszają się tak, aby nie ,,blokować'' sobie nawzajem dróg (spowalniając się nawzajem).\n"
 "    Szarżujący Armia, która jest najbliżej Kleesive, będzie poruszała się przed innymi.\n"
-"  \\item Zamek i Bastion mają już zdobyte wszystkie Kopalnie na swoim terytorium (kafelki mapy nie-Inferno). Umieść kostki wroga na\n"
+"  \\item Zamek i Bastion mają już zdobyte wszystkie Kopalnie na swoim terytorium (kafelki mapy nie-Inferno). Umieść Kostki wroga na\n"
 "    wszystkich ich Kopalniach.\n"
 "  \\item Twoje mury, bramy i wieża łuczicza w Kleesive są odbudowane po każdej bitwie.\n"
 "  \\item Jednostki \\svg{unit_flying} wroga będą przelatywały nad murami i bramami, aby atakować Twoje Jednostki, gdy tylko jest to możliwe.\n"
