Fix glyphs in the table

--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -89,8 +89,8 @@ During this Scenario:
 \hommtable[]{15}{
   \begin{tabularx}{\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
-    \lightcell[1.8]{\raisebox{-.25\height}{\svg{activation-table}} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\ 
-    \lightcell[3.8]{\raisebox{-.25\height}{\svg{ongoing-table}} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
+    \lightcell[1.8]{\svg{activation-table} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\
+    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated \\ and receives +1 \svg{damage-table} from every source of \\ \svg{damage-table} and attacks for every Arcane Spike placed on them (even if they were to receive 0 damage)} \\
   \end{tabularx}
 }
 
